<resources>
    <string name="app_name">MVVM Sample App</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Register</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login_">Login?</string>
    <string name="no_account_sign_up">Don\'t have account, Sign Up now?</string>

    <string name="welcome">Welcome!!</string>
</resources>